--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       background-color: black;
     }
   </style>
-</head>
+<script defer src="/flow/bundle.js"></script></head>
 <body>
   <audio id="audio" controls>
     <source src="/audiotest" type="audio/mp3">
