Relative path instead

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <audio id="audio" controls>
-    <source src="/audiotest" type="audio/mp3">
+    <source src="audiotest" type="audio/mp3">
   </audio>
   <canvas id="visualizer"></canvas>
   <script src="bundle.js"></script>
