--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       background-color: black;
     }
   </style>
-</head>
+<script defer src="/flow/bundle.js"></script></head>
 <body>
   <audio id="audio" controls>
     <source src="audiotest" type="audio/mp3">
   </audio>
   <canvas id="visualizer"></canvas>
-  <script src="bundle.js"></script>
+  <script src="dist/bundle.js"></script>
 </body>
 </html>
