--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,6 @@
     <source src="audiotest" type="audio/mp3">
   </audio>
   <canvas id="visualizer"></canvas>
-  <script src="bundle.js"></script>
+  <script src="dist/bundle.js"></script>
 </body>
 </html>
